--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,8 +2,8 @@
 
 #app {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   background-color: var(--colour-background);
