--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -33,3 +33,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+a, a:visited {
+  color: var(--colour-neutral);
+}
